# ecsls

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  banana-vera-clang.nix  ecsls.nix  ecsls.toml  flake.nix  install_as_vscode_extension.sh  libclangpy.nix  pyproject.toml  requirements.txt  setup.cfg
src/ecsls/: __init__.py  __main__.py  config.py  server.py  vera.py  version.py
