[metadata]
name = ecsls
version = 0.0.1
author = Sigmanificient, Drawbu
description = Language Server for the Epitech Coding Style
platform = unix, linux

[options]
include_package_data = True
packages =
    ecsls
python_requires = >=3.10
package_dir =
    = src
zip_safe = no

[options.entry_points]
console_scripts =
    ecsls_run = ecsls.__main__:main

